// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`matches snapshot > default variant 1`] = `
<DocumentFragment>
  <div
    class="sc-iqkkDd kdRpNH aje-input__text sc-fKwzVe gSKwJm aje-input--default is-medium"
    data-has-value="true"
  >
    <label
      class="sc-bdDsCe bLPJOA"
      id="react-aria-:r1:"
    >
      Text Label
    </label>
    <p
      class="sc-gtcBCx kLsxUZ is-auto"
      id="react-aria-:r3:"
    >
      message
    </p>
    <input
      aria-describedby="react-aria-:r3:"
      aria-labelledby="react-aria-:r1:"
      class="sc-gKkgUA bzpolP"
      id="react-aria-:r0:"
      placeholder="placeholder"
      tabindex="0"
      type="text"
      value="content"
    />
  </div>
</DocumentFragment>
`;

exports[`matches snapshot > floating variant 1`] = `
<DocumentFragment>
  <div
    class="sc-iqkkDd kdRpNH aje-input__text sc-fKwzVe gSKwJm aje-input--floating is-medium"
    data-has-value="true"
  >
    <div
      class="sc-cxxQMU gZUQNc"
    >
      <input
        aria-describedby="react-aria-:r8:"
        aria-labelledby="react-aria-:r6:"
        class="sc-gKkgUA bzpolP"
        id="react-aria-:r5:"
        placeholder="placeholder"
        tabindex="0"
        type="text"
        value="content"
      />
      <label
        class="sc-bdDsCe bLPJOA"
        id="react-aria-:r6:"
      >
        Text Label
      </label>
    </div>
    <p
      class="sc-gtcBCx kLsxUZ is-auto"
      id="react-aria-:r8:"
    >
      message
    </p>
  </div>
</DocumentFragment>
`;
